<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, AndroidShopActivity!</string>
    <string name="app_name">DealsInterest</string>
    <string name="Welcome">Welcome to Android Shop</string>
    <string name="login">Please login/register to continue</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="registration">Registration</string>
    <string name="name">Name:</string>
    <string name="cfmPassword">Confirm Password:</string>
    <string name="gender">Gender:</string>
    <string name="birthdate">Birthdate:</string>
    <string name="setBirthdate">Set/Change Birthdate</string>
    <string name="search_label">Search shop</string>
    <string name="search_hint">E.g. Watsons</string>
    <string name="APIMapKey">0fJKoBXvkjaxqXZ_loYfQEEXmINxngMMjOROQSQ</string>
    
</resources>
