<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
	android:id="@+id/LinearLayout1"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<TextView
		android:textSize="15dp"
		android:text="@string/login"
		android:id="@+id/loginTxt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/welcomeTxt"
		android:layout_centerHorizontal="true">
	</TextView>

	<ImageView
		android:id="@+id/imageView1"
		android:src="@drawable/icon"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/loginTxt"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="20dp">
	</ImageView>

	<EditText
		android:layout_width="210dp"
		android:inputType="textEmailAddress"
		android:id="@+id/emailTxtBox"
		android:layout_below="@+id/imageView1"
		android:layout_toRightOf="@+id/emailTxt"
		android:layout_marginTop="10dp"
		android:textSize="17px"
		android:paddingBottom="5dp"
		android:paddingLeft="5dp"
		android:layout_height="30dp"
		android:hint="Please enter your email address">
	</EditText>

	<TextView
		android:text="@string/email"
		android:id="@+id/emailTxt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignTop="@+id/emailTxtBox"
		android:layout_alignLeft="@+id/welcomeTxt">
	</TextView>

	<EditText
		android:layout_width="210dp"
		android:inputType="textPassword"
		android:id="@+id/pwTxtBox"
		android:layout_alignTop="@+id/passwordTxt"
		android:layout_alignLeft="@+id/emailTxtBox"
		android:textSize="17px"
		android:textScaleX="0.7"
		android:paddingBottom="5dp"
		android:paddingLeft="5dp"
		android:layout_height="30dp"
		android:hint="Please enter your password">
	</EditText>

	<TextView
		android:text="@string/password"
		android:id="@+id/passwordTxt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/emailTxtBox"
		android:layout_alignRight="@+id/emailTxt"
		android:layout_marginTop="15dp">
	</TextView>

	<TextView
		android:textSize="20dp"
		android:text="@string/Welcome"
		android:id="@+id/welcomeTxt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="20dp">
	</TextView>

	<!-- <ImageButton android:src="@drawable/signin_twitter_button" -->
	<!-- android:layout_width="157dp" android:layout_height="29dp" android:id="@+id/imageButton2" -->
	<!-- android:layout_below="@+id/passwordTxt" -->
	<!-- android:layout_centerHorizontal="true" android:layout_marginTop="74dp"> -->
	<!-- </ImageButton> -->

	<Button
		android:textSize="15px"
		android:layout_width="150dp"
		android:text="Login"
		android:id="@+id/loginBtn"
		android:layout_height="38dp"
		android:layout_below="@+id/pwTxtBox"
		android:layout_toRightOf="@+id/passwordTxt"
		android:layout_marginTop="15dp">
	</Button>
	
	<socialtour.socialtour.FacebookBtn
		android:layout_width="wrap_content"
		android:id="@+id/fbLoginBtn"
		android:layout_height="wrap_content"
		android:src="@drawable/fb_login_button"
		android:layout_below="@+id/loginBtn"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="15dp"
		android:background="@null">
	</socialtour.socialtour.FacebookBtn>

	<ImageButton
		android:layout_height="wrap_content"
		android:background="@drawable/twitter_button"
		android:layout_width="wrap_content"
		android:id="@+id/twitBtn"
		android:layout_below="@+id/fbLoginBtn"
		android:layout_alignLeft="@+id/registerBtn"
		android:layout_marginTop="10dp">
	</ImageButton>

	<ImageButton
		android:layout_height="wrap_content"
		android:background="@drawable/register_button"
		android:layout_width="wrap_content"
		android:id="@+id/registerBtn"
		android:layout_below="@+id/twitBtn"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="10dp">
	</ImageButton>



</RelativeLayout>
